--- a/ccompiler.css
+++ b/ccompiler.css
@@ -1,60 +1,59 @@
 /* CCompiler.css */
 
 body {
+	background-color: #000000;
 	font-family:Verdana;
 }
 
 h1 {
+	color: white;
+	font-size: 30pt;
+	font-weight: normal;
+	font-style: normal;
 	text-align: center;
 }
 
 #page {
 	position: absolute;
-	top: 80px;
-	left: 40px;
-	right: 40px;
-	bottom: 40px;
+	top: 100px;
+	left: 60px;
+	right: 60px;
+	bottom: 60px;
 }
 
 #input {
-	border: 1px solid black;
+	border: 1px solid white;
 	position: absolute;
 	width: 400px;
 	top: 0px;
-	left: 0px;
+	left: 100px;
 	bottom: 40px;
 }
 
 #output {
-	border: 1px solid black;
+	border: 1px solid white;
 	position: absolute;
 	top: 0px;
-	left: 420px;
-	right: 0px;
+	left: 520px;
+	right: 100px;
 	bottom: 0px;
 	overflow-y: scroll;
 	padding: 5px;
 	word-break: break-all;
 }
 
-#toolbar {
+#compile {
+	color: white;
 	position: absolute;
 	height: 30px;
-	button: 0px;
-}
-
-#toolbar div {
-	background-clor: #DDD;
-	width: 194px;
+	left: 100px;
+	bottom: 0px;
+	background-color: #000000;
+	width: 400px;
 	height: 23px;
 	text-align: center;
 	float: left;
 	padding-top: 5px;
-	border: 1px solid black;
+	border: 1px solid white;
 	cursor: pointer;
-}
-
-pre {
-	margin: 0;
-	white-space: pre-wrap;
 }
